stylesheets/style.css
/* Fonts */
@font-face {
    font-family: PixelFont;
    src: url(/fonts/font.ttf);
}

/* IDs */
#planetImage {
    cursor: pointer;
}

/* Classes */
body {
    background: #133444;
    font-family: PixelFont; 
    text-align: center;
    font-size: max(2vw, 2vh);
    text-shadow: 5px 5px 0 black;
    color: white;
    overflow: hidden;
    margin-top: 10vh;
}

.Planet{
    width: max(30vw, 30vh);
    height: max(30vw, 30vh);
    overflow: hidden;
    z-index: -1;
    position: absolute;
    top:0;
    bottom: 0;
    left: 0;
    right: 0;
    opacity: 0.75;
    
    margin: auto;
}  

.Planet_spritesheet {
    animation: moveSpriteSheet 10s steps(100) infinite;
    width: max(3000vw, 3000vh);
}

/* Utility classes */

.pixelart {
    image-rendering: pixelated;
}

/* Animation keyframes */

@keyframes moveSpriteSheet {
    from {
        transform: translate3d(0px, 0, 0)
    }

    to {
        transform: translate3d(-100%, 0, 0)
    }
}

